--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -28,20 +28,19 @@ page-home {
             margin-top: 20px;
         }
         .logo-001 {
-            height: 250px;
-            margin-top:40px;
-            margin-left:45px
-        }        
+          display: block;
+          height: 250px;
+          margin: 0.5rem auto 3rem;
+        }
         .logo-kinetik {
-            margin-left:40px;
-            margin-top: 20px;
-            object-fit: cover
+          display: block;
+          margin: 2rem auto;
         }
         .sistema1 {
-            margin-top:50px;
+            margin: 2rem 2rem 0;
         }
         .sistema2 {
-            margin-top:30px;
+            margin: 1rem 2rem 2rem;
         }
         .boton-001 {
             margin-top:50px;
@@ -50,5 +49,34 @@ page-home {
 
 }
 
+.ad2hs-prompt {
+  background-color: rgb(59, 134, 196); /* Blue */
+  border: none;
+  // display: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  position: absolute;
+  margin: 0 1rem 1rem;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: calc(100% - 32px);
+}
+.ios-prompt {
+  background-color: #fcfcfc;
+  border: 1px solid #666;
+  // display: none;
+  padding: 0.8rem 1rem 0 0.5rem;
+  text-decoration: none;
+  font-size: 16px;
+  color: #555;
+  position: absolute;
+  margin: 0 auto 1rem;
+  left: 1rem;
+  right: 1rem;
+  bottom: 0;
+}
 
- 
